--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,14 @@
     filter: drop-shadow(0px 0px 4px rgba(0,0,0,0.25));
 }
 
+@utility font-lato {
+    font-family: var(--font-lato), Lato, sans-serif;
+}
+
+@utility font-nunito {
+    font-family: var(--font-nunito), Nunito, sans-serif;
+}
+
 @keyframes slide-in-right {
   from {
     transform: translateX(100%);
